[project]
name = "VAEAC"
version = "0.1.0"
description = "VAEAC"
authors = [{ name = "Dhruv Panchal And Preet Shah", email = "panchaldhruv27223@gmail.com" }]
readme = "README.md"
requires-python = "==3.12.3"
license = { file = "LICENSE" }
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
